Modified some file add new service for monitor.service

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-POSTGRES_DB="postgres://uptimer:api@192.168.0.42/uptimer
-NODE_ENV=development"
+POSTGRES_DB="postgresql://uptimer:lrILWFSoQDUkr4jpnRmUQrvctc0mQVxg@dpg-cv2lm2rtq21c73f1pb80-a.frankfurt-postgres.render.com/uptimer_d5o1"
+NODE_ENV=development
 SECRET_KEY_ONE=kMOEn4iXN2APBYJ
 SECRET_KEY_TWO=DBCcCNG9eZ9QgJP
 JWT_TOKEN=CLLGlJ4WJStx5gA
