--- a/package.json
+++ b/package.json
@@ -14,21 +14,30 @@
     "@graphql-tools/schema": "^10.0.21",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "chalk": "^5.4.1",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.1",
     "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "pg": "^8.13.3",
     "pino": "^9.6.0",
-    "pino-pretty": "^10.2.0",
+    "pino-pretty": "^10.3.1",
     "sequelize": "^6.37.5",
     "typescript": "^5.8.2",
-    "typescript-transform-paths": "^3.5.3"
+    "typescript-transform-paths": "^3.5.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
