--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chalk": "^5.4.1",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "croner": "^9.0.0",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
