--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-async-errors": "^3.1.1",
     "express-session": "^1.18.1",
     "graphql": "^16.10.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.4",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "pg": "^8.13.3",
@@ -31,6 +33,7 @@
     "sequelize": "^6.37.5",
     "typescript": "^5.8.2",
     "typescript-transform-paths": "^3.5.3",
+    "ws": "^8.18.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -39,6 +42,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.16",
+    "@types/ws": "^8.18.0",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
