Create tcp monitor uptimer and ssl model

--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
-POSTGRES_DB="postgresql://uptimer:lrILWFSoQDUkr4jpnRmUQrvctc0mQVxg@dpg-cv2lm2rtq21c73f1pb80-a.frankfurt-postgres.render.com/uptimer_d5o1"
 NODE_ENV=development
 SECRET_KEY_ONE=kMOEn4iXN2APBYJ
 SECRET_KEY_TWO=DBCcCNG9eZ9QgJP
 JWT_TOKEN=CLLGlJ4WJStx5gA
-SENDER_EMAIL="minhhoang"
-SENDER_EMAIL_PASSWORD="123"
+SENDER_EMAIL=breanna.flatley90@ethereal.email
+SENDER_EMAIL_PASSWORD=R483PW9RzvfkRqhu5n
 CLIENT_URL=http://localhost:3000
 PORT=5000
+
+DB_HOST="localhost"
+DB_USERNAME="root"
+DB_PORT=3306
+DB_PASSWORD="160525"
+DB_NAME="uptimer-app"
