--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "croner": "^9.0.0",
     "dayjs": "^1.11.13",
+    "email-templates": "^12.0.2",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.18.1",
@@ -29,6 +30,9 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.15.0",
+    "mysql2": "^3.14.0",
+    "net": "^1.0.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
     "pino": "^9.6.0",
     "pino-pretty": "^10.3.1",
@@ -42,9 +46,11 @@
   "devDependencies": {
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
+    "@types/email-templates": "^10.0.4",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.16",
+    "@types/nodemailer": "^6.4.17",
     "@types/ws": "^8.18.0",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
